Api updated to include metadata in payment session create
